Aanpassingen index.html en style.css

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
         <div>
             <h2>Over mezelf</h2>
             <ul>
-                <li>Ik heb een heel leuke klas</li>
                 <li>Ik heb een hekel aan files</li>
+                <li>Ik heb een hekel aan files</li>
+                <li>Denksport is mijn favoriete sport</li>
+                <li>Denksport is mijn favoriete sport</li>
                 <li>Denksport is mijn favoriete sport</li>
             </ul>
         </div>
